# 3D-Texture-Oriented-Scene-Editing

./: .gitignore  README.md  output.json  pyproject.toml
Miku/: sparse_pc.ply  transforms.json
Miku/colmap/sparse/0/: project.ini
gaussctrl/: gc_config.py  gc_dataparser_ns.py  gc_model.py  gc_pipeline.py  gstexcontrol_model.py  utils.py
gstex/: gstex.py  gstex_configs.py
igs2gs/: gc_render.py  igs2gs.py  igs2gs_config.py  igs2gs_datamanager.py  igs2gs_pipeline.py  ip2p.py
metrics/: clip_metric.py  script.py
