[project]
name = "3dedit"
version = "0.1.0"

dependencies=[
    "nerfstudio>=1.0.0",
    "clip @ git+https://github.com/openai/CLIP.git",
    "diffusers>=0.14.0.dev0",
    "transformers>=4.26.1",
    "accelerate",
    "einops",
]

# black
[tool.black]
line-length = 120

# pylint
[tool.pylint.messages_control]
max-line-length = 120
generated-members = ["numpy.*", "torch.*", "cv2.*", "cv.*"]
good-names-rgxs = "^[_a-zA-Z][_a-z0-9]?$"
ignore-paths = ["scripts/colmap2nerf.py"]
jobs = 0
ignored-classes = ["TensorDataclass"]

disable = [
  "duplicate-code",
  "fixme",
  "logging-fstring-interpolation",
  "too-many-arguments",
  "too-many-branches",
  "too-many-instance-attributes",
  "too-many-locals",
  "unnecessary-ellipsis",
]

[tool.setuptools.packages.find]
include = ["igs2gs", "gstex","gaussctrl"]
[project.entry-points.'nerfstudio.method_configs']
igs2gs = 'igs2gs.igs2gs_config:igs2gs_method'
gstex-blender-nvs = 'gstex.gstex_configs:blender_method'
gstex-dtu-nvs = 'gstex.gstex_configs:dtu_method'
gstex-dtu-load = 'gstex.gstex_configs:dtu_load_method'
gaussctrl = 'gaussctrl.gc_config:gaussctrl_method'
gstexctrl = 'gaussctrl.gc_config:gstexctrl_method'
[project.scripts]
ns-gaussctrl-render = "igs2gs.gc_render:entrypoint"